--- a/index.html
+++ b/index.html
@@ -22,8 +22,10 @@
     <link rel="stylesheet" type="text/css" href="assets/css/vno.css">
     <!-- 引入图标字体样式 -->
     <link rel="stylesheet" type="text/css" href="assets/css/iconfont.css">
+    <!-- 新增自定义样式表 -->
+    <link rel="stylesheet" type="text/css" href="assets/css/airoprtdocs.css">
     <!-- 设置苹果设备的图标 -->
-    <link rel="apple-touch-icon" href="..\assets\\img\apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="apple-touch-icon.png">
     <!-- 设置网页的 favicon 图标 -->
     <link rel="icon" href="..\assets\\img\favicon.ico">
 </head>
@@ -130,7 +132,7 @@
                                     </li>
                                     <!-- 导航项：博客 -->
                                     <li class="navigation__item">
-                                        <a href="https://Chifishfish.cn" class="blog-button" target="_blank">机场教程</a>
+                                        <a href="..\airportdocs\index.html" class="blog-button" target="_blank">机场教程</a>
                                     </li>
                                     <!-- 导航项：简历 -->
                                     <li class="navigation__item">
