--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
     <!-- 新增自定义样式表 -->
     <link rel="stylesheet" type="text/css" href="assets/css/airoprtdocs.css">
     <!-- 设置苹果设备的图标 -->
-    <link rel="apple-touch-icon" href="apple-touch-icon.png">
+    <link rel="apple-touch-icon" href="../assets/img/apple-touch-icon.png">
     <!-- 设置网页的 favicon 图标 -->
     <link rel="icon" href="..\assets\\img\favicon.ico">
 </head>
