--- a/index.html
+++ b/index.html
@@ -70,6 +70,12 @@
                 <p i18n="contact">Contact me</p>
               </a>
             </li>
+            <li class="nav__item">
+              <a href="./choose_tutorial.html" target="_blank" class="nav__link">
+                <i class="uil uil-user nav__icon"></i>
+                <p i18n="tutorial">Tutorial</p>
+              </a>
+            </li>
             <!-- 语言切换按钮 -->
             <li class="nav__item">
               <div class="nav__link" id="translate" value="en">
